--- a/style.css
+++ b/style.css
@@ -93,13 +93,17 @@ img{
     p,input{
     text-align: center;
 }
-.input{
+.plan-input{
     background-color:#E95A08;
     border: none;
-    /* color:green !important; */
+  
     padding: 10px;
 
 }  
+
+.plan-input  placeholder{
+  color: white;
+}
 .p-weight{
     
     font-weight:700 ;
@@ -136,6 +140,9 @@ img{
   height: 50%;
  
 }
+.deal-class{
+  color:#E95A08;
+}
 .div-2 img{
 
   height: 100%;
@@ -144,12 +151,24 @@ img{
 }
 
 .div-2{
-
+  position: relative;
   width: 60%;
   margin: 10px;
 }
+.div-3{
+  position: absolute;
+  top: 200px;
+  left: 200px;
+}
+.div-3 h4{
+  font-size:40px;
+  color:white;
+}
 
-
+.div-3 p{
+  font-size:25px;
+  color:white;
+}
   /*Flower & Plants Lover section style start here */
 .flower-conten{
           margin-top: 50px;
@@ -200,11 +219,36 @@ button{
   left: -5px;
   border: none;
 }
+
+footer{
+   justify-content: space-around;
+}
+
+footer ul li{
+  list-style: none;
+ 
+}
+.footer-div-1{
+
+
+  width: 200px;
+  
+  text-align: center;
+}
+.med-icon img{
+  width: 30px;
+  position: relative;
+  top: 30px;
+ 
+
+}
+
   /*Flower & Plants Lover section style end here*/
 /* media screen style start here*/
 @media screen and (max-width :576px) {
 
         /* navbar style start here */
+      
            .hidden{
                     visibility: hidden;
           }
@@ -271,9 +315,10 @@ button{
 }
 
 .join-btn{
+  text-align: center;
   position: absolute;
   top: 50px;
-  left: 200px;
+  left: 100px;
 
 }
 button{
@@ -287,9 +332,7 @@ button{
 
 }
 
-/* .latest-deals-continer img{
-  width: 100%;
-  height: 100%; */
+
   
 
 .latest-deals-continer{
@@ -306,6 +349,15 @@ button{
   border-radius: 15px;
 }
 
+footer{
+
+  margin-top: 30px;
+  flex-direction: column;
+}
+
+.footer-list{
+  flex-direction: column;
+}
 
 }
 
